switching to a single page portfolio site

--- a/index.html
+++ b/index.html
@@ -5,14 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
-    <link rel="stylesheet" type="text/css" href="assets/css/style.scss">
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <title>Phil Cowan</title>
 </head>
 <body>
-    
-
-
-
+    <header class="masthead"><div class="name">Phil Cowan</div><div class="linkcard">Github icon linked in icon pdf resume</div></header>
 
 
 <!-- jquery link -->
