adds last project links

--- a/index.html
+++ b/index.html
@@ -17,9 +17,8 @@
       <a href="https://github.com/phil4lif" target="_blank">
         <img id="githubicon" src="assets/images/githubicon.png" alt="Github icon">
       </a> 
-    </div>
-    <div class="links">
-
+      </div>
+      <div class="links">
       <a href="https://www.linkedin.com/in/philip-cowan-510558195/" target="_blank"><img id="linkedinicon" alt="linked in icon" src="assets/images/linkedinlogo.png">
       </a>
     </div>
@@ -28,9 +27,7 @@
 
 
     <div class="parallax-container">
-        <div class="parallax">
-          <img src="assets/images/milwaukee_skyline.jpg">
-        </div>
+        <div class="parallax"><img src="assets/images/milwaukee_skyline.jpg"></div>
       </div>
       <div class="section black">
         <div class="row container">
@@ -51,7 +48,7 @@
 
       <div class="section black">
         <div class="row container">
-          <h2 class="header white-text text-darken-3 lighten-3">Portfolio</h2>
+          <h2 class="header white-text text-darken-3 lighten-3">Projects</h2>
          
   <div class="row">
     <div class="col s12 m7">
@@ -70,7 +67,6 @@
     </div>
   </div>
 
-  
   <div class="row">
     <div class="col s12 m7">
       <div class="card">
@@ -88,7 +84,6 @@
     </div>
   </div>
 
-  
   <div class="row">
     <div class="col s12 m7">
       <div class="card">
@@ -106,7 +101,6 @@
     </div>
   </div>
 
-  
   <div class="row">
     <div class="col s12 m7">
       <div class="card">
@@ -124,20 +118,18 @@
     </div>
   </div>
 
-  
   <div class="row">
     <div class="col s12 m7">
       <div class="card">
         <div class="card-image">
-          <img src="images/sample-1.jpg">
-          <span class="card-title">Card Title</span>
+          <img src="assets/images/koya.jpg">
+          <span class="card-title">Koya Music</span>
         </div>
         <div class="card-content">
-          <p>I am a very simple card. I am good at containing small bits of information.
-          I am convenient because I require little markup to use effectively.</p>
+          <p>This is a multi page info site for a band.</p>
         </div>
         <div class="card-action">
-          <a href="#">This is a link</a>
+          <a href="https://phil4lif.github.io/KoyaMusic/">Koya Music</a>
         </div>
       </div>
     </div>
@@ -145,12 +137,6 @@
 
       </div>
         </div>
-      
-
-
-
-
-
 
 <!-- jquery link -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
