gets the parallax images to display

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
           <p>This is a team project, the app allows a user to search multiple job api's at the same time.  info in a concise neat table, and allows the user to sign in to save jobs to come back and apply later.  I implemented firebase for the oauth and database functionality, I wrote the ajax call for a job search api, </p>
         </div>
         <div class="card-action">
-          <a target="_blank" href="https://zuk881.github.io/blue_barracudas/">Let's Get Paid</a>
+          <a target="_blank" href="https://zuk881.github.io/blue_barracudas/" class="black-text">Let's Get Paid</a>
         </div>
       </div>
     </div>
@@ -95,7 +95,7 @@
           <p>This is a company website that I was hired to clean up and redesign. It was made on the wix editor.</p>
         </div>
         <div class="card-action">
-          <a target="_blank" href="connollyelectric.net">Connolly Electric & Mechanical</a>
+          <a target="_blank" href="connollyelectric.net" class="black-text">Connolly Electric & Mechanical</a>
         </div>
       </div>
     </div>
@@ -112,7 +112,7 @@
           <p>A simple app that allows a user to query the giphy api, to display results, start and stop the animation with a click, and save favorites.  I built this with html, css, javascript, jquery, ajax, and used local storage.</p>
         </div>
         <div class="card-action">
-          <a href="https://phil4lif.github.io/giftastic/">Animal Gifs</a>
+          <a href="https://phil4lif.github.io/giftastic/" class="black-text">Animal Gifs</a>
         </div>
       </div>
     </div>
@@ -129,7 +129,7 @@
           <p>This is a multi page info site for a band.</p>
         </div>
         <div class="card-action">
-          <a href="https://phil4lif.github.io/KoyaMusic/">Koya Music</a>
+          <a href="https://phil4lif.github.io/KoyaMusic/" class="black-text">Koya Music</a>
         </div>
       </div>
     </div>
@@ -137,10 +137,16 @@
 
       </div>
         </div>
+        
 
 <!-- jquery link -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
  <!-- Compiled and minified JavaScript -->
  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+ <script>
+  $(document).ready(function(){
+   $('.parallax').parallax();
+  });
+ </script>
 </body>
 </html>
