--- a/index.html
+++ b/index.html
@@ -1,152 +1,181 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <!-- Compiled and minified CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-    <title>Phil Cowan</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <!-- Compiled and minified CSS -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+  <title>Phil Cowan</title>
 </head>
+
 <body>
-    <header class="masthead">
+  <!-- <div class="row masthead"><div class="col s12 m6"><h1 class="name">Phil Cowan</h1></div>
+  <div class="col s6 m3"><a href="https://github.com/phil4lif" target="_blank">
+    <img id="githubicon" src="assets/images/githubicon.png" alt="Github icon">
+  </a>
+</div>
+<div class="col s6 m3"><a href="https://www.linkedin.com/in/philip-cowan-510558195/" target="_blank"><img id="linkedinicon"
+  alt="linked in icon" src="assets/images/linkedinlogo.png">
+</a>
+</div>
+  </div> -->
+  <header class="masthead">
+    <div class="">
       <div class="name">Phil Cowan</div>
       <div class="linkcard">
-      <div class="links">
-      <a href="https://github.com/phil4lif" target="_blank">
-        <img id="githubicon" src="assets/images/githubicon.png" alt="Github icon">
-      </a> 
+        <div class="links">
+          <a href="https://github.com/phil4lif" target="_blank">
+            <img id="githubicon" src="assets/images/githubicon.png" alt="Github icon">
+          </a>
+        </div>
+        <div class="links">
+          <a href="https://www.linkedin.com/in/philip-cowan-510558195/" target="_blank"><img id="linkedinicon"
+              alt="linked in icon" src="assets/images/linkedinlogo.png">
+          </a>
+        </div>
       </div>
-      <div class="links">
-      <a href="https://www.linkedin.com/in/philip-cowan-510558195/" target="_blank"><img id="linkedinicon" alt="linked in icon" src="assets/images/linkedinlogo.png">
-      </a>
-    </div>
     </div>
   </header>
 
 
-    <div class="parallax-container">
-        <div class="parallax"><img src="assets/images/milwaukee_skyline.jpg"></div>
-      </div>
-      <div class="section black">
-        <div class="row container">
-          <h2 class="header white-text text-darken-3 lighten-3">Phil Cowan</h2>
-          <div class="picandbio">
-          <img src="assets/images/me.jpg" alt="Phil Cowan" class="me">
-          <!-- <div class="bio"> -->
-          <p class=" bio white-text text-darken-3 lighten-3">A front end developer with a foundation in HTML, CSS, Javascript, JQuery and Node.js.  Currently enrolled in the University of Arizona’s Full Stack developer certificate program. I’m eager to learn more and become a better developer everyday.  I really enjoy working on a team, although I am not afraid to work alone.  On a recent team project I handled the ajax call to a job post api, as well as the authentication of users and user saves to the firebase realtime database.  I have a long history in customer service and hospitality.  I can confidently and professionally communicate directly with customers and team members.</p>
+  <div class="parallax-container">
+    <div class="parallax"><img src="assets/images/milwaukee_skyline.jpg"></div>
+  </div>
+  <div class="section black">
+    <div class="row container">
+      <h2 class="header white-text text-darken-3 lighten-3">Phil Cowan</h2>
+      <div class="picandbio">
+        <img src="assets/images/me.jpg" alt="Phil Cowan" class="me">
+        <!-- <div class="bio"> -->
+        <p class=" bio white-text text-darken-3 lighten-3">A front end developer with a foundation in HTML, CSS,
+          Javascript, JQuery and Node.js. Currently enrolled in the University of Arizona’s Full Stack developer
+          certificate program. I’m eager to learn more and become a better developer everyday. I really enjoy working on
+          a team, although I am not afraid to work alone. On a recent team project I handled the ajax call to a job post
+          api, as well as the authentication of users and user saves to the firebase realtime database. I have a long
+          history in customer service and hospitality. I can confidently and professionally communicate directly with
+          customers and team members.</p>
         <!-- </div> -->
       </div>
-        </div>
-      </div>
-      <div class="parallax-container">
-        <div class="parallax">
-          <img src="assets/images/phoenix_skyline.JPG">
-        </div>
-      </div>
-
-      <div class="section black">
-        <div class="row container">
-          <h2 class="header white-text text-darken-3 lighten-3">Projects</h2>
-         
-  <div class="row">
-    <div class="col s12 m7">
-      <div class="card">
-        <div class="card-image">
-          <img src="assets/images/train.jpg">
-          <span class="card-title">Train Tracker</span>
-        </div>
-        <div class="card-content">
-          <p>This app allows a user to enter schedule details about a train.  The user can save the data, and sign back in to see it again.  I built this web application with HTML, CSS, Bootstrap, Javascript, Jquery, Firebase, and Moment.js</p>
-        </div>
-        <div class="card-action">
-          <a class="black-text" target="_blank"href="https://phil4lif.github.io/train-schedule/">Train Tracker</a>
-        </div>
-      </div>
+    </div>
+  </div>
+  <div class="parallax-container">
+    <div class="parallax">
+      <img src="assets/images/phoenix_skyline.JPG">
     </div>
   </div>
 
-  <div class="row">
-    <div class="col s12 m7">
-      <div class="card">
-        <div class="card-image">
-          <img src="assets/images/lgpss.png">
-          <span class="card-title">Let's Get Paid</span>
-        </div>
-        <div class="card-content">
-          <p>This is a team project, the app allows a user to search multiple job api's at the same time.  info in a concise neat table, and allows the user to sign in to save jobs to come back and apply later.  I implemented firebase for the oauth and database functionality, I wrote the ajax call for a job search api, </p>
-        </div>
-        <div class="card-action">
-          <a target="_blank" href="https://zuk881.github.io/blue_barracudas/" class="black-text">Let's Get Paid</a>
+  <div class="section black">
+    <div class="row container">
+      <h2 class="header white-text text-darken-3 lighten-3">Projects</h2>
+
+      <div class="row">
+        <div class="col s12 m7">
+          <div class="card">
+            <div class="card-image">
+              <img src="assets/images/train.jpg">
+              <span class="card-title">Train Tracker</span>
+            </div>
+            <div class="card-content">
+              <p>This app allows a user to enter schedule details about a train. The user can save the data, and sign
+                back in to see it again. I built this web application with HTML, CSS, Bootstrap, Javascript, Jquery,
+                Firebase, and Moment.js</p>
+            </div>
+            <div class="card-action">
+              <a class="black-text" target="_blank" href="https://phil4lif.github.io/train-schedule/">Train Tracker</a>
+            </div>
+          </div>
         </div>
       </div>
+
+      <div class="row">
+        <div class="col s12 m7">
+          <div class="card">
+            <div class="card-image">
+              <img src="assets/images/lgpss.png">
+              <span class="card-title">Let's Get Paid</span>
+            </div>
+            <div class="card-content">
+              <p>This is a team project, the app allows a user to search multiple job api's at the same time. info in a
+                concise neat table, and allows the user to sign in to save jobs to come back and apply later. I
+                implemented firebase for the oauth and database functionality, I wrote the ajax call for a job search
+                api, </p>
+            </div>
+            <div class="card-action">
+              <a target="_blank" href="https://zuk881.github.io/blue_barracudas/" class="black-text">Let's Get Paid</a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col s12 m7">
+          <div class="card">
+            <div class="card-image">
+              <img src="assets/images/connollylogo.png">
+              <span class="card-title">Connolly Electric</span>
+            </div>
+            <div class="card-content">
+              <p>This is a company website that I was hired to clean up and redesign. It was made on the wix editor.</p>
+            </div>
+            <div class="card-action">
+              <a target="_blank" href="connollyelectric.net" class="black-text">Connolly Electric & Mechanical</a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col s12 m7">
+          <div class="card">
+            <div class="card-image">
+              <img src="assets/images/giphy_logo_square_social.png">
+              <span class="card-title">Animal Gifs</span>
+            </div>
+            <div class="card-content">
+              <p>A simple app that allows a user to query the giphy api, to display results, start and stop the
+                animation with a click, and save favorites. I built this with html, css, javascript, jquery, ajax, and
+                used local storage.</p>
+            </div>
+            <div class="card-action">
+              <a href="https://phil4lif.github.io/giftastic/" class="black-text">Animal Gifs</a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col s12 m7">
+          <div class="card">
+            <div class="card-image">
+              <img src="assets/images/koya.jpg">
+              <span class="card-title">Koya Music</span>
+            </div>
+            <div class="card-content">
+              <p>This is a multi page info site for a band.</p>
+            </div>
+            <div class="card-action">
+              <a href="https://phil4lif.github.io/KoyaMusic/" class="black-text">Koya Music</a>
+            </div>
+          </div>
+        </div>
+      </div>
+
     </div>
   </div>
 
-  <div class="row">
-    <div class="col s12 m7">
-      <div class="card">
-        <div class="card-image">
-          <img src="assets/images/connollylogo.png">
-          <span class="card-title">Connolly Electric</span>
-        </div>
-        <div class="card-content">
-          <p>This is a company website that I was hired to clean up and redesign. It was made on the wix editor.</p>
-        </div>
-        <div class="card-action">
-          <a target="_blank" href="connollyelectric.net" class="black-text">Connolly Electric & Mechanical</a>
-        </div>
-      </div>
-    </div>
-  </div>
 
-  <div class="row">
-    <div class="col s12 m7">
-      <div class="card">
-        <div class="card-image">
-          <img src="assets/images/giphy_logo_square_social.png">
-          <span class="card-title">Animal Gifs</span>
-        </div>
-        <div class="card-content">
-          <p>A simple app that allows a user to query the giphy api, to display results, start and stop the animation with a click, and save favorites.  I built this with html, css, javascript, jquery, ajax, and used local storage.</p>
-        </div>
-        <div class="card-action">
-          <a href="https://phil4lif.github.io/giftastic/" class="black-text">Animal Gifs</a>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="row">
-    <div class="col s12 m7">
-      <div class="card">
-        <div class="card-image">
-          <img src="assets/images/koya.jpg">
-          <span class="card-title">Koya Music</span>
-        </div>
-        <div class="card-content">
-          <p>This is a multi page info site for a band.</p>
-        </div>
-        <div class="card-action">
-          <a href="https://phil4lif.github.io/KoyaMusic/" class="black-text">Koya Music</a>
-        </div>
-      </div>
-    </div>
-  </div>
-
-      </div>
-        </div>
-        
-
-<!-- jquery link -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
- <!-- Compiled and minified JavaScript -->
- <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
- <script>
-  $(document).ready(function(){
-   $('.parallax').parallax();
-  });
- </script>
+  <!-- jquery link -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <!-- Compiled and minified JavaScript -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+  <script>
+    $(document).ready(function () {
+      $('.parallax').parallax();
+    });
+  </script>
 </body>
+
 </html>
