fixes navbar, but need to make more responsive

--- a/index.html
+++ b/index.html
@@ -6,12 +6,30 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <!-- Compiled and minified CSS -->
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
   <title>Phil Cowan</title>
 </head>
 
 <body>
+  
+  <nav>
+    <div class="nav-wrapper">
+      <a href="#" class="brand-logo"><h1 class="name">Phil Cowan</h1></a>
+      <ul id="nav-mobile" class="right hide-on-med-and-down">
+        <li><a class="githubicon"href="https://github.com/phil4lif" target="_blank">
+          <img class="githubicon" src="assets/images/githubicon.png" alt="Github icon"></a>
+        </li>
+        <li><a class="linkedinicon" href="https://www.linkedin.com/in/philip-cowan-510558195/" target="_blank"><img class="linkedinicon"
+          alt="linked in icon" src="assets/images/linkedinlogo.png">
+        </a>
+      </li>
+    
+      </ul>
+    </div>
+  </nav>
   <!-- <div class="row masthead"><div class="col s12 m6"><h1 class="name">Phil Cowan</h1></div>
   <div class="col s6 m3"><a href="https://github.com/phil4lif" target="_blank">
     <img id="githubicon" src="assets/images/githubicon.png" alt="Github icon">
@@ -22,7 +40,7 @@
 </a>
 </div>
   </div> -->
-  <header class="masthead">
+  <!-- <header class="masthead">
     <div class="">
       <div class="name">Phil Cowan</div>
       <div class="linkcard">
@@ -38,7 +56,7 @@
         </div>
       </div>
     </div>
-  </header>
+  </header> -->
 
 
   <div class="parallax-container">
