implements materialize grid in bio section

--- a/index.html
+++ b/index.html
@@ -14,19 +14,21 @@
 </head>
 
 <body>
-  
+
   <nav>
     <div class="nav-wrapper">
-      <a href="#" class="brand-logo"><h1 class="name">Phil Cowan</h1></a>
+      <a href="#" class="brand-logo">
+        <h1 class="name">Phil Cowan</h1>
+      </a>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
-        <li><a class="githubicon"href="https://github.com/phil4lif" target="_blank">
-          <img class="githubicon" src="assets/images/githubicon.png" alt="Github icon"></a>
+        <li><a class="githubicon" href="https://github.com/phil4lif" target="_blank">
+            <img class="githubicon" src="assets/images/githubicon.png" alt="Github icon"></a>
         </li>
-        <li><a class="linkedinicon" href="https://www.linkedin.com/in/philip-cowan-510558195/" target="_blank"><img class="linkedinicon"
-          alt="linked in icon" src="assets/images/linkedinlogo.png">
-        </a>
-      </li>
-    
+        <li><a class="linkedinicon" href="https://www.linkedin.com/in/philip-cowan-510558195/" target="_blank"><img
+              class="linkedinicon" alt="linked in icon" src="assets/images/linkedinlogo.png">
+          </a>
+        </li>
+
       </ul>
     </div>
   </nav>
@@ -62,23 +64,38 @@
   <div class="parallax-container">
     <div class="parallax"><img src="assets/images/milwaukee_skyline.jpg"></div>
   </div>
+
   <div class="section black">
     <div class="row container">
-      <h2 class="header white-text text-darken-3 lighten-3">Phil Cowan</h2>
+      <div class="row">
+        <div class="col s4">
+          <h2 class="header white-text text-darken-3 lighten-3">Phil Cowan</h2>
+        </div>
+      </div>
       <div class="picandbio">
-        <img src="assets/images/me.jpg" alt="Phil Cowan" class="me">
+        <div class="row">
+          <div class="col s4">
+            <img src="assets/images/me.jpg" alt="Phil Cowan" class="me">
+          </div>
+
+        
         <!-- <div class="bio"> -->
-        <p class=" bio white-text text-darken-3 lighten-3">A front end developer with a foundation in HTML, CSS,
-          Javascript, JQuery and Node.js. Currently enrolled in the University of Arizona’s Full Stack developer
-          certificate program. I’m eager to learn more and become a better developer everyday. I really enjoy working on
-          a team, although I am not afraid to work alone. On a recent team project I handled the ajax call to a job post
-          api, as well as the authentication of users and user saves to the firebase realtime database. I have a long
-          history in customer service and hospitality. I can confidently and professionally communicate directly with
-          customers and team members.</p>
-        <!-- </div> -->
+        <div class="col s8">
+          <p class=" bio white-text text-darken-3 lighten-3">A front end developer with a foundation in HTML, CSS,
+            Javascript, JQuery and Node.js. Currently enrolled in the University of Arizona’s Full Stack developer
+            certificate program. I’m eager to learn more and become a better developer everyday. I really enjoy working
+            on
+            a team, although I am not afraid to work alone. On a recent team project I handled the ajax call to a job
+            post
+            api, as well as the authentication of users and user saves to the firebase realtime database. I have a long
+            history in customer service and hospitality. I can confidently and professionally communicate directly with
+            customers and team members.</p>
+          <!-- </div> --></div>
+        </div>
       </div>
     </div>
   </div>
+
   <div class="parallax-container">
     <div class="parallax">
       <img src="assets/images/phoenix_skyline.JPG">
