--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     </div>
   </header> -->
 
-
+<!-- top image  -->
   <div class="parallax-container">
     <div class="parallax"><img src="assets/images/milwaukee_skyline.jpg"></div>
   </div>
@@ -75,7 +75,7 @@
       <div class="picandbio">
         <div class="row">
           <div class="col s4">
-            <img src="assets/images/me.jpg" alt="Phil Cowan" class="me">
+            <img class="responsive-img" src="assets/images/me.jpg" alt="Phil Cowan" class="me">
           </div>
 
         
@@ -95,7 +95,7 @@
       </div>
     </div>
   </div>
-
+<!-- second image -->
   <div class="parallax-container">
     <div class="parallax">
       <img src="assets/images/phoenix_skyline.JPG">
