--- a/index.html
+++ b/index.html
@@ -119,7 +119,9 @@
                 Firebase, and Moment.js</p>
             </div>
             <div class="card-action">
-              <a class="black-text" target="_blank" href="https://phil4lif.github.io/train-schedule/">Train Tracker</a>
+              <a class="black-text" target="_blank" href="https://phil4lif.github.io/train-schedule/">Deployment</a>
+              <a class="black-text" target="_blank" href="https://github.com/phil4lif/train-schedule">Github Repo</a>
+
             </div>
           </div>
         </div>
@@ -139,7 +141,9 @@
                 api, </p>
             </div>
             <div class="card-action">
-              <a target="_blank" href="https://zuk881.github.io/blue_barracudas/" class="black-text">Let's Get Paid</a>
+              <a target="_blank" href="https://zuk881.github.io/blue_barracudas/" class="black-text">Deployment</a>
+              <a class="black-text" target="_blank" href="https://github.com/zuk881/blue_barracudas">Github Repo</a>
+
             </div>
           </div>
         </div>
@@ -175,7 +179,9 @@
                 used local storage.</p>
             </div>
             <div class="card-action">
-              <a href="https://phil4lif.github.io/giftastic/" class="black-text">Animal Gifs</a>
+              <a href="https://phil4lif.github.io/giftastic/" class="black-text">Deployment</a>
+              <a class="black-text" target="_blank" href="https://github.com/phil4lif/giftastic">Github Repo</a>
+
             </div>
           </div>
         </div>
@@ -189,7 +195,7 @@
               <span class="card-title">Koya Music</span>
             </div>
             <div class="card-content">
-              <p>This is a multi page info site for a band.</p>
+              <p>This is a multi page website for a band.</p>
             </div>
             <div class="card-action">
               <a href="https://phil4lif.github.io/KoyaMusic/" class="black-text">Koya Music</a>
