--- a/index.html
+++ b/index.html
@@ -21,11 +21,13 @@
         <h1 class="name">Phil Cowan</h1>
       </a>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
-        <li><a class="githubicon" href="https://github.com/phil4lif" target="_blank">
+        <li>
+          <a class="githubicon" href="https://github.com/phil4lif" target="_blank">
             <img class="githubicon" src="assets/images/githubicon.png" alt="Github icon"></a>
         </li>
-        <li><a class="linkedinicon" href="https://www.linkedin.com/in/philip-cowan-510558195/" target="_blank"><img
-              class="linkedinicon" alt="linked in icon" src="assets/images/linkedinlogo.png">
+        <li>
+          <a class="linkedinicon" href="https://www.linkedin.com/in/philip-cowan-510558195/" target="_blank">
+            <img class="linkedinicon" alt="Linked in Icon" src="assets/images/linkedinlogo.png">
           </a>
         </li>
 
