fixed connolly link, adds some missing target blanks

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
               <p>This is a company website that I was hired to clean up and redesign. It was made on the wix editor.</p>
             </div>
             <div class="card-action">
-              <a target="_blank" href="connollyelectric.net" class="black-text">Connolly Electric & Mechanical</a>
+              <a target="_blank" href="https://www.connollyelectric.net" class="black-text">Connolly Electric & Mechanical</a>
             </div>
           </div>
         </div>
@@ -181,7 +181,7 @@
                 used local storage.</p>
             </div>
             <div class="card-action">
-              <a href="https://phil4lif.github.io/giftastic/" class="black-text">Deployment</a>
+              <a href="https://phil4lif.github.io/giftastic/" target="_blank" class="black-text">Deployment</a>
               <a class="black-text" target="_blank" href="https://github.com/phil4lif/giftastic">Github Repo</a>
 
             </div>
@@ -200,7 +200,7 @@
               <p>This is a multi page website for a band.</p>
             </div>
             <div class="card-action">
-              <a href="https://phil4lif.github.io/KoyaMusic/" class="black-text">Koya Music</a>
+              <a target="_blank" href="https://phil4lif.github.io/KoyaMusic/" class="black-text">Koya Music</a>
             </div>
           </div>
         </div>
