fixes mobile response of bio section

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
   <div class="section black">
     <div class="row container">
       <div class="row">
-        <div class="col s4">
+        <div class="col s12">
           <h2 class="header white-text text-darken-3 lighten-3">Phil Cowan</h2>
         </div>
       </div>
@@ -82,7 +82,7 @@
 
         
         <!-- <div class="bio"> -->
-        <div class="col s8">
+        <div class="col s12 m8">
           <p class=" bio white-text text-darken-3 lighten-3">A front end developer with a foundation in HTML, CSS,
             Javascript, JQuery and Node.js. Currently enrolled in the University of Arizona’s Full Stack developer
             certificate program. I’m eager to learn more and become a better developer everyday. I really enjoy working
