--- a/index.html
+++ b/index.html
@@ -14,13 +14,32 @@
 </head>
 
 <body>
-
-  <nav>
+  <div class="black section myheader">
+    <div class="row container">
+      <div class="row">
+        <div class="col s12 m4">
+          <a href="#" class="brand-logo">
+            <h1 class=" white-text text-darken-3 lighten-3 name">Phil Cowan</h1>
+          </a>
+        </div>
+        <div class="col s6 m3 push-m3">
+          <a class="githubicon" href="https://github.com/phil4lif" target="_blank">
+            <img class="githubicon" src="assets/images/githubicon.png" alt="Github icon"></a>
+        </div>
+        <div class="col s6 m3 push-m3">
+          <a class="linkedinicon" href="https://www.linkedin.com/in/philip-cowan-510558195/" target="_blank">
+            <img class="linkedinicon" alt="Linked in Icon" src="assets/images/linkedinlogo.png">
+          </a>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- <nav>
     <div class="nav-wrapper">
       <a href="#" class="brand-logo">
         <h1 class="name">Phil Cowan</h1>
       </a>
-      <ul id="nav-mobile" class="right hide-on-med-and-down">
+      <ul id="nav-mobile" class="right">
         <li>
           <a class="githubicon" href="https://github.com/phil4lif" target="_blank">
             <img class="githubicon" src="assets/images/githubicon.png" alt="Github icon"></a>
@@ -33,7 +52,7 @@
 
       </ul>
     </div>
-  </nav>
+  </nav> -->
   <!-- <div class="row masthead"><div class="col s12 m6"><h1 class="name">Phil Cowan</h1></div>
   <div class="col s6 m3"><a href="https://github.com/phil4lif" target="_blank">
     <img id="githubicon" src="assets/images/githubicon.png" alt="Github icon">
@@ -62,12 +81,12 @@
     </div>
   </header> -->
 
-<!-- top image  -->
+  <!-- top image  -->
   <div class="parallax-container">
     <div class="parallax"><img src="assets/images/milwaukee_skyline.jpg"></div>
   </div>
 
-  <div class="section black">
+  <div class=" black">
     <div class="row container">
       <div class="row">
         <div class="col s12">
@@ -80,31 +99,35 @@
             <img class="responsive-img" src="assets/images/me.jpg" alt="Phil Cowan" class="me">
           </div>
 
-        
-        <!-- <div class="bio"> -->
-        <div class="col s12 m8">
-          <p class=" bio white-text text-darken-3 lighten-3">A front end developer with a foundation in HTML, CSS,
-            Javascript, JQuery and Node.js. Currently enrolled in the University of Arizona’s Full Stack developer
-            certificate program. I’m eager to learn more and become a better developer everyday. I really enjoy working
-            on
-            a team, although I am not afraid to work alone. On a recent team project I handled the ajax call to a job
-            post
-            api, as well as the authentication of users and user saves to the firebase realtime database. I have a long
-            history in customer service and hospitality. I can confidently and professionally communicate directly with
-            customers and team members.</p>
-          <!-- </div> --></div>
+
+          <!-- <div class="bio"> -->
+          <div class="col s12 m8">
+            <p class=" bio white-text text-darken-3 lighten-3">A front end developer with a foundation in HTML, CSS,
+              Javascript, JQuery and Node.js. Currently enrolled in the University of Arizona’s Full Stack developer
+              certificate program. I’m eager to learn more and become a better developer everyday. I really enjoy
+              working
+              on
+              a team, although I am not afraid to work alone. On a recent team project I handled the ajax call to a job
+              post
+              api, as well as the authentication of users and user saves to the firebase realtime database. I have a
+              long
+              history in customer service and hospitality. I can confidently and professionally communicate directly
+              with
+              customers and team members.</p>
+            <!-- </div> -->
+          </div>
         </div>
       </div>
     </div>
   </div>
-<!-- second image -->
+  <!-- second image -->
   <div class="parallax-container">
     <div class="parallax">
       <img src="assets/images/phoenix_skyline.JPG">
     </div>
   </div>
 
-  <div class="section black">
+  <div class="section black" id="projects">
     <div class="row container">
       <h2 class="header white-text text-darken-3 lighten-3">Projects</h2>
 
@@ -162,7 +185,8 @@
               <p>This is a company website that I was hired to clean up and redesign. It was made on the wix editor.</p>
             </div>
             <div class="card-action">
-              <a target="_blank" href="https://www.connollyelectric.net" class="black-text">Connolly Electric & Mechanical</a>
+              <a target="_blank" href="https://www.connollyelectric.net" class="black-text">Connolly Electric &
+                Mechanical</a>
             </div>
           </div>
         </div>
