--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
 
 <body>
   <div class="black section myheader">
-    <div class="row container">
+    <!-- <div class="row container"> -->
       <div class="row">
         <div class="col s12 m4">
           <a href="#" class="brand-logo">
             <h1 class=" white-text text-darken-3 lighten-3 name">Phil Cowan</h1>
           </a>
         </div>
-        <div class="col s6 m3 push-m3">
+        <div class="col s6 push-s1 m3 push-m3">
           <a class="githubicon" href="https://github.com/phil4lif" target="_blank">
             <img class="githubicon" src="assets/images/githubicon.png" alt="Github icon"></a>
         </div>
@@ -32,7 +32,7 @@
           </a>
         </div>
       </div>
-    </div>
+    <!-- </div> -->
   </div>
   <!-- <nav>
     <div class="nav-wrapper">
