more responsiveness for the header

--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
             <h1 class=" white-text text-darken-3 lighten-3 name">Phil Cowan</h1>
           </a>
         </div>
-        <div class="col s6 push-s1 m3 push-m3">
+        <div class="col s6 m2 push-m2 push-l4">
           <a class="githubicon" href="https://github.com/phil4lif" target="_blank">
             <img class="githubicon" src="assets/images/githubicon.png" alt="Github icon"></a>
         </div>
-        <div class="col s6 m3 push-m3">
+        <div class="col s6 push-s1 m2 push-m3 push-l4">
           <a class="linkedinicon" href="https://www.linkedin.com/in/philip-cowan-510558195/" target="_blank">
             <img class="linkedinicon" alt="Linked in Icon" src="assets/images/linkedinlogo.png">
           </a>
