--- a/index.html
+++ b/index.html
@@ -34,59 +34,13 @@
       </div>
     <!-- </div> -->
   </div>
-  <!-- <nav>
-    <div class="nav-wrapper">
-      <a href="#" class="brand-logo">
-        <h1 class="name">Phil Cowan</h1>
-      </a>
-      <ul id="nav-mobile" class="right">
-        <li>
-          <a class="githubicon" href="https://github.com/phil4lif" target="_blank">
-            <img class="githubicon" src="assets/images/githubicon.png" alt="Github icon"></a>
-        </li>
-        <li>
-          <a class="linkedinicon" href="https://www.linkedin.com/in/philip-cowan-510558195/" target="_blank">
-            <img class="linkedinicon" alt="Linked in Icon" src="assets/images/linkedinlogo.png">
-          </a>
-        </li>
-
-      </ul>
-    </div>
-  </nav> -->
-  <!-- <div class="row masthead"><div class="col s12 m6"><h1 class="name">Phil Cowan</h1></div>
-  <div class="col s6 m3"><a href="https://github.com/phil4lif" target="_blank">
-    <img id="githubicon" src="assets/images/githubicon.png" alt="Github icon">
-  </a>
-</div>
-<div class="col s6 m3"><a href="https://www.linkedin.com/in/philip-cowan-510558195/" target="_blank"><img id="linkedinicon"
-  alt="linked in icon" src="assets/images/linkedinlogo.png">
-</a>
-</div>
-  </div> -->
-  <!-- <header class="masthead">
-    <div class="">
-      <div class="name">Phil Cowan</div>
-      <div class="linkcard">
-        <div class="links">
-          <a href="https://github.com/phil4lif" target="_blank">
-            <img id="githubicon" src="assets/images/githubicon.png" alt="Github icon">
-          </a>
-        </div>
-        <div class="links">
-          <a href="https://www.linkedin.com/in/philip-cowan-510558195/" target="_blank"><img id="linkedinicon"
-              alt="linked in icon" src="assets/images/linkedinlogo.png">
-          </a>
-        </div>
-      </div>
-    </div>
-  </header> -->
 
   <!-- top image  -->
   <div class="parallax-container">
     <div class="parallax"><img src="assets/images/milwaukee_skyline.jpg"></div>
   </div>
 
-  <div class=" black">
+  <div class="section black">
     <div class="row container">
       <div class="row">
         <div class="col s12">
@@ -95,13 +49,13 @@
       </div>
       <div class="picandbio">
         <div class="row">
-          <div class="col s4">
-            <img class="responsive-img" src="assets/images/me.jpg" alt="Phil Cowan" class="me">
+          <div class="col s12 m4">
+            <img  src="assets/images/me.jpg" alt="Phil Cowan" class="me">
           </div>
 
 
           <!-- <div class="bio"> -->
-          <div class="col s12 m8">
+          <div class="col s12 m8 push-m1 l7">
             <p class=" bio white-text text-darken-3 lighten-3">A front end developer with a foundation in HTML, CSS,
               Javascript, JQuery and Node.js. Currently enrolled in the University of Arizona’s Full Stack developer
               certificate program. I’m eager to learn more and become a better developer everyday. I really enjoy
