--- a/index.html
+++ b/index.html
@@ -49,13 +49,13 @@
       </div>
       <div class="picandbio">
         <div class="row">
-          <div class="col s12 m4">
+          <div class="col s12 m5 l4">
             <img  src="assets/images/me.jpg" alt="Phil Cowan" class="me">
           </div>
 
 
           <!-- <div class="bio"> -->
-          <div class="col s12 m8 push-m1 l7">
+          <div class="col s12 m7 l8">
             <p class=" bio white-text text-darken-3 lighten-3">A front end developer with a foundation in HTML, CSS,
               Javascript, JQuery and Node.js. Currently enrolled in the University of Arizona’s Full Stack developer
               certificate program. I’m eager to learn more and become a better developer everyday. I really enjoy
