--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <div class="black section myheader">
     <!-- <div class="row container"> -->
       <div class="row">
-        <div class="col s12 m3">
+        <div class="col s12 m3 l1">
           <a href="#" class="brand-logo">
             <h1 class=" white-text text-darken-3 lighten-3 name">Phil Cowan</h1>
           </a>
