--- a/index.html
+++ b/index.html
@@ -86,10 +86,10 @@
       <h2 class="header white-text text-darken-3 lighten-3">Projects</h2>
 
       <div class="row">
-        <div class="col s12 m7">
+        <div class="col s12 m6">
           <div class="card">
             <div class="card-image">
-              <img src="assets/images/train.jpg">
+              <img src="assets/images/trainportpic.jpg" alt="Train Picture">
               <span class="card-title">Train Tracker</span>
             </div>
             <div class="card-content">
@@ -100,43 +100,36 @@
             <div class="card-action">
               <a class="black-text" target="_blank" href="https://phil4lif.github.io/train-schedule/">Deployment</a>
               <a class="black-text" target="_blank" href="https://github.com/phil4lif/train-schedule">Github Repo</a>
-
             </div>
           </div>
         </div>
-      </div>
 
-      <div class="row">
-        <div class="col s12 m7">
+        <div class="col s12 m6">
           <div class="card">
             <div class="card-image">
-              <img src="assets/images/lgpss.png">
+              <img src="assets/images/lgpss.png" alt="App Screenshot">
               <span class="card-title">Let's Get Paid</span>
             </div>
             <div class="card-content">
-              <p>This is a team project, the app allows a user to search multiple job api's at the same time. info in a
-                concise neat table, and allows the user to sign in to save jobs to come back and apply later. I
-                implemented firebase for the oauth and database functionality, I wrote the ajax call for a job search
-                api, </p>
+              <p>This is a team project, the goal was to make an app that could query mulitple job api's with one search. I wrote the code for the ajax call to one api, and used firebase to allow the user to login and save jobs they like to the realtime database to apply or delete later. </p>
             </div>
             <div class="card-action">
               <a target="_blank" href="https://zuk881.github.io/blue_barracudas/" class="black-text">Deployment</a>
               <a class="black-text" target="_blank" href="https://github.com/zuk881/blue_barracudas">Github Repo</a>
-
             </div>
           </div>
         </div>
       </div>
 
       <div class="row">
-        <div class="col s12 m7">
+        <div class="col s12 m6">
           <div class="card">
             <div class="card-image">
-              <img src="assets/images/connollylogo.png">
+              <img src="assets/images/connollylogo.png" alt="connolly electric logo">
               <span class="card-title">Connolly Electric</span>
             </div>
             <div class="card-content">
-              <p>This is a company website that I was hired to clean up and redesign. It was made on the wix editor.</p>
+              <p>This is a company website that I was hired to clean up and redesign. It was made on the wix editor.</p><br><br>
             </div>
             <div class="card-action">
               <a target="_blank" href="https://www.connollyelectric.net" class="black-text">Connolly Electric &
@@ -144,13 +137,10 @@
             </div>
           </div>
         </div>
-      </div>
-
-      <div class="row">
-        <div class="col s12 m7">
+        <div class="col s12 m6">
           <div class="card">
             <div class="card-image">
-              <img src="assets/images/giphy_logo_square_social.png">
+              <img src="assets/images/giphy_logo_square_social.png" alt="giphy logo">
               <span class="card-title">Animal Gifs</span>
             </div>
             <div class="card-content">
@@ -168,10 +158,10 @@
       </div>
 
       <div class="row">
-        <div class="col s12 m7">
+        <div class="col s12 m6">
           <div class="card">
             <div class="card-image">
-              <img src="assets/images/koya.jpg">
+              <img src="assets/images/koya.jpg" alt="koya album cover">
               <span class="card-title">Koya Music</span>
             </div>
             <div class="card-content">
