--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <div class="row">
         <div class="col s12 m3 l1">
           <a href="#" data-target="slide-out" class="sidenav-trigger">
-            <h1 class=" white-text text-darken-3 lighten-3 name">Phil Cowan</h1>
+            <h1 class=" white-text text-darken-3 lighten-3 name">Philip Cowan</h1>
           </a>
         </div>
         <div class="col s5 m3 push-m3 l2 push-l7">
