--- a/index.html
+++ b/index.html
@@ -125,15 +125,15 @@
         <div class="col s12 m6">
           <div class="card">
             <div class="card-image">
-              <img src="assets/images/lgpss.png" alt="App Screenshot">
-              <span class="card-title">Let's Get Paid</span>
+              <img src="assets/images/liriss.png" alt="App Screenshot">
+              <span class="card-title">Node LIRI Bot</span>
             </div>
             <div class="card-content">
-              <p>This is a team project, the goal was to make an app that could query mulitple job api's with one search. I wrote the code for the ajax call to one api, and used firebase to allow the user to login and save jobs they like to the realtime database to apply or delete later. </p>
+              <p>This is a Node.JS application that allows the user to input one of four commands with a term, and the app returns information from one of 3 api's based on the request.</p>
             </div>
             <div class="card-action">
-              <a target="_blank" href="https://zuk881.github.io/blue_barracudas/" class="black-text">Deployment</a>
-              <a class="black-text" target="_blank" href="https://github.com/zuk881/blue_barracudas">Github Repo</a>
+              <a target="_blank" href="https://github.com/phil4lif/liri-node-app" class="black-text">Github Repo</a>
+
             </div>
           </div>
         </div>
@@ -176,6 +176,21 @@
       </div>
 
       <div class="row">
+        <div class="col s12 m6">
+          <div class="card">
+            <div class="card-image">
+              <img src="assets/images/lgpss.png" alt="App Screenshot">
+              <span class="card-title">Let's Get Paid</span>
+            </div>
+            <div class="card-content">
+              <p>This is a team project, the goal was to make an app that could query mulitple job api's with one search. I wrote the code for the ajax call to one api, and used firebase to allow the user to login and save jobs they like to the realtime database to apply or delete later. </p>
+            </div>
+            <div class="card-action">
+              <a target="_blank" href="https://zuk881.github.io/blue_barracudas/" class="black-text">Deployment</a>
+              <a class="black-text" target="_blank" href="https://github.com/zuk881/blue_barracudas">Github Repo</a>
+            </div>
+          </div>
+        </div>
         <div class="col s12 m6">
           <div class="card">
             <div class="card-image">
