formats some card sizes

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
             <div class="card-content">
               <p>A simple app that allows a user to query the giphy api, to display results, start and stop the
                 animation with a click, and save favorites. I built this with html, css, javascript, jquery, ajax, and
-                used local storage.</p><br><br>
+                used local storage.</p><br>
             </div>
             <div class="card-action">
               <a href="https://phil4lif.github.io/giftastic/" target="_blank" class="black-text">Deployment</a>
