adds Plus sign to try to make slideout Menu obvious

--- a/index.html
+++ b/index.html
@@ -16,42 +16,48 @@
 <body>
   <div class="black section myheader">
     <!-- <div class="row container"> -->
-      <div class="row">
-        <div class="col s12 m3 l1">
-          <a href="#" data-target="slide-out" class="sidenav-trigger">
-            <h1 class=" white-text text-darken-3 lighten-3 name">Philip Cowan</h1>
-          </a>
-        </div>
-        <div class="col s5 m3 push-m3 l2 push-l7">
-          <a class="githubicon" href="https://github.com/phil4lif" target="_blank">
-            <img class="githubicon" src="assets/images/githubicon.png" alt="Github icon"></a>
-        </div>
-        <div class="col s5 push-s1 m2 push-m4 l1 push-l7">
-          <a class="linkedinicon" href="https://www.linkedin.com/in/philip-cowan-510558195/" target="_blank">
-            <img class="linkedinicon" alt="Linked in Icon" src="assets/images/linkedinlogo.png">
-          </a>
-        </div>
+    <div class="row">
+      <div class="col s12 m3 l1">
+        <a href="#" data-target="slide-out" class="sidenav-trigger">
+          <h1 class=" white-text text-darken-3 lighten-3 name">+Philip Cowan</h1>
+        </a>
       </div>
+      <div class="col s5 m3 push-m3 l2 push-l7">
+        <a class="githubicon" href="https://github.com/phil4lif" target="_blank">
+          <img class="githubicon" src="assets/images/githubicon.png" alt="Github icon"></a>
+      </div>
+      <div class="col s5 push-s1 m2 push-m4 l1 push-l7">
+        <a class="linkedinicon" href="https://www.linkedin.com/in/philip-cowan-510558195/" target="_blank">
+          <img class="linkedinicon" alt="Linked in Icon" src="assets/images/linkedinlogo.png">
+        </a>
+      </div>
+    </div>
     <!-- </div> -->
     <!-- sidenav -->
   </div>
   <ul id="slide-out" class="sidenav">
-    <li><div class="user-view">
-      <div class="background">
-        <img src="assets/images/tokyocolor.jpg">
+    <li>
+      <div class="user-view">
+        <div class="background">
+          <img src="assets/images/tokyocolor.jpg">
+        </div>
+        <a href="#user"><img class="circle" src="assets/images/me.jpg"></a>
+        <a href="#bio"><span class="waves-effect shadow white-text ">Philip Cowan</span></a>
+        <a href="#email"><span class="shadow white-text email">philipjcowan1@gmail.com</span></a>
       </div>
-      <a href="#user"><img class="circle" src="assets/images/me.jpg"></a>
-      <a href="#bio"><span class="waves-effect shadow white-text ">Philip Cowan</span></a>
-      <a href="#email"><span class="shadow white-text email">philipjcowan1@gmail.com</span></a>
-    </div></li>
+    </li>
     <li><a class="waves-effect" href="#projects"><i class="material-icons">work</i>Projects</a></li>
-    <li><a class="waves-effect" target="_blank" href="https://docs.google.com/document/d/1bMZOuBeTNz5tIoqBX3f2B9g0fsoChusGvkwpPAjH31w/edit?usp=sharing"><i class="material-icons">format_align_left
-    </i>Resume</a></li>
-    <li><div class="divider"></div></li>
+    <li><a class="waves-effect" target="_blank"
+        href="https://docs.google.com/document/d/1bMZOuBeTNz5tIoqBX3f2B9g0fsoChusGvkwpPAjH31w/edit?usp=sharing"><i
+          class="material-icons">format_align_left
+        </i>Resume</a></li>
+    <li>
+      <div class="divider"></div>
+    </li>
     <!-- <li><a class="subheader">Subheader</a></li> -->
     <!-- <li><a class="waves-effect" href="#!">Third Link With Waves</a></li> -->
   </ul>
-  
+
 
   <!-- top image  -->
   <div class="parallax-container">
@@ -68,7 +74,7 @@
       <div class="picandbio">
         <div class="row">
           <div class="col s12 m5 l4">
-            <img  src="assets/images/me.jpg" alt="Phil Cowan" class="me">
+            <img src="assets/images/me.jpg" alt="Phil Cowan" class="me">
           </div>
 
 
@@ -129,7 +135,8 @@
               <span class="card-title">Node LIRI Bot</span>
             </div>
             <div class="card-content">
-              <p>This is a Node.JS application that allows the user to input one of four commands with a term, and the app returns information from one of 3 api's based on the request.</p><br>
+              <p>This is a Node.JS application that allows the user to input one of four commands with a term, and the
+                app returns information from one of 3 api's based on the request.</p><br>
             </div>
             <div class="card-action">
               <a target="_blank" href="https://github.com/phil4lif/liri-node-app" class="black-text">Github Repo</a>
@@ -147,7 +154,9 @@
               <span class="card-title">Let's Get Paid</span>
             </div>
             <div class="card-content">
-              <p>This is a team project, the goal was to make an app that could query mulitple job api's with one search. I wrote the code for the ajax call to one api, and used firebase to allow the user to login and save jobs they like to the realtime database to apply or delete later. </p>
+              <p>This is a team project, the goal was to make an app that could query mulitple job api's with one
+                search. I wrote the code for the ajax call to one api, and used firebase to allow the user to login and
+                save jobs they like to the realtime database to apply or delete later. </p>
             </div>
             <div class="card-action">
               <a target="_blank" href="https://zuk881.github.io/blue_barracudas/" class="black-text">Deployment</a>
@@ -183,7 +192,8 @@
               <span class="card-title">Connolly Electric</span>
             </div>
             <div class="card-content">
-              <p>This is a company website that I was hired to clean up and redesign. It was made on the wix editor.</p><br><br>
+              <p>This is a company website that I was hired to clean up and redesign. It was made on the wix editor.</p>
+              <br><br>
             </div>
             <div class="card-action">
               <a target="_blank" href="https://www.connollyelectric.net" class="black-text">Connolly Electric &
@@ -231,9 +241,9 @@
     $(document).ready(function () {
       $('.parallax').parallax();
     });
-    $(document).ready(function(){
-    $('.sidenav').sidenav();
-  });
+    $(document).ready(function () {
+      $('.sidenav').sidenav();
+    });
   </script>
 </body>
 
