changed PHILIP Cowan to Who Am I writes out skills apart from bio paragraph

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <div class="row container">
       <div class="row">
         <div class="col s12">
-          <h2 class="header white-text text-darken-3 lighten-3">Philip Cowan</h2>
+          <h2 class="header white-text text-darken-3 lighten-3">Who Am I?</h2>
         </div>
       </div>
       <div class="picandbio">
@@ -80,20 +80,20 @@
 
           <!-- <div class="bio"> -->
           <div class="col s12 m7 l8">
-            <p class=" bio white-text text-darken-3 lighten-3">A front end developer with a foundation in HTML, CSS,
-              Javascript, JQuery and Node.js. Currently enrolled in the University of Arizona’s Full Stack developer
-              certificate program. I’m eager to learn more and become a better developer everyday. I really enjoy
-              working
-              on
-              a team, although I am not afraid to work alone. On a recent team project I handled the ajax call to a job
-              post
-              api, as well as the authentication of users and user saves to the firebase realtime database. I have a
-              long
-              history in customer service and hospitality. I can confidently and professionally communicate directly
-              with
-              customers and team members.</p>
+            <p class=" bio white-text text-darken-3 lighten-3">A full stack developer with a background in music and the service industry.
+              Currently enrolled in the University of Arizona’s Full Stack developer
+              certificate program, to finish in May 2020. I’m eager to learn more and become a better developer everyday. I really enjoy
+              working on a team to achieve high goals.
+               </p>
             <!-- </div> -->
           </div>
+        </div>
+        <div class="row">
+          <div class="col s12">
+            <h2 class="white-text">Skills</h2>
+          </div><div class="col s12 white-text bio"><p>HTML, CSS, Materialize, Bootstrap, Javascript, Jquery, NodeJS, Firebase, MySQL, Express, AJAX, API,
+            and learning more every week!
+          </p></div>
         </div>
       </div>
     </div>
@@ -240,10 +240,9 @@
   <script>
     $(document).ready(function () {
       $('.parallax').parallax();
-    });
-    $(document).ready(function () {
       $('.sidenav').sidenav();
     });
+
   </script>
 </body>
 
