adds bamazon to portfolio section

--- a/index.html
+++ b/index.html
@@ -80,10 +80,9 @@
 
           <!-- <div class="bio"> -->
           <div class="col s12 m7 l8">
-            <p class=" bio white-text text-darken-3 lighten-3">A full stack developer with a background in music and the service industry.
-              Currently enrolled in the University of Arizona’s Full Stack developer
-              certificate program, to finish in May 2020. I’m eager to learn more and become a better developer everyday. I really enjoy
-              working on a team to achieve high goals.
+            <p class=" bio white-text text-darken-3 lighten-3">A full stack developer with a background in music and the service industry.  Looking forward to working on a team to make an awesome product to solve any number of real life problems.
+            Currently enrolled in the University of Arizona’s Full Stack developer
+            certificate program, to finish in May 2020. 
                </p>
             <!-- </div> -->
           </div>
@@ -185,37 +184,22 @@
       </div>
 
       <div class="row">
+
+
         <div class="col s12 m6">
           <div class="card">
             <div class="card-image">
-              <img src="assets/images/connollylogo.png" alt="connolly electric logo">
-              <span class="card-title">Connolly Electric</span>
+              <img src="assets/images/bamazoncust.png" alt="Bamazon Screenshot"">
+              <span class="card-title">Bamazon Store</span>
             </div>
             <div class="card-content">
-              <p>This is a company website that I was hired to clean up and redesign. It was made on the wix editor.</p>
-              <br><br>
+              <p>A command line storefront written with NodeJS, MySQL, and inquirer to prompt the user. </p>
             </div>
             <div class="card-action">
-              <a target="_blank" href="https://www.connollyelectric.net" class="black-text">Connolly Electric &
-                Mechanical</a>
+              <a target="_blank" href="https://github.com/phil4lif/bamazon" class="black-text">Github Repo</a>
             </div>
           </div>
         </div>
-
-        <!-- <div class="col s12 m6">
-          <div class="card">
-            <div class="card-image">
-              <img src="assets/images/koya.jpg" alt="koya album cover">
-              <span class="card-title">Koya Music</span>
-            </div>
-            <div class="card-content">
-              <p>This is a multi page website for a band.</p>
-            </div>
-            <div class="card-action">
-              <a target="_blank" href="https://phil4lif.github.io/KoyaMusic/" class="black-text">Koya Music</a>
-            </div>
-          </div>
-        </div> -->
       </div>
 
     </div>
