adds new burger app to the portfolio section

--- a/index.html
+++ b/index.html
@@ -128,15 +128,15 @@
         <div class="col s12 m6">
           <div class="card">
             <div class="card-image">
-              <img src="assets/images/liriss.png" alt="App Screenshot">
-              <span class="card-title">Node LIRI Bot</span>
+              <img src="assets/images/spencer-davis-o_XkavUaGEw-unsplash2.jpg" alt="App Screenshot">
+              <span class="card-title">Burger!</span>
             </div>
             <div class="card-content">
-              <p>This is a Node.JS application that allows the user to input one of four commands with a term, and the
-                app returns information from one of 3 api's based on the request.</p><br>
+              <p>An app that allows a user to add a burger to the database, eat it, and delete it. Built with handlebars, express, mySQL</p><br>
             </div>
             <div class="card-action">
-              <a target="_blank" href="https://github.com/phil4lif/liri-node-app" class="black-text">Github Repo</a>
+              <a class="black-text" target="_blank" href="https://boiling-dawn-49572.herokuapp.com/">Deployment</a>
+              <a target="_blank" href="https://github.com/phil4lif/burger" class="black-text">Github Repo</a>
 
             </div>
           </div>
