changes plus sign back to menu icon for the sliedeout menu

--- a/index.html
+++ b/index.html
@@ -17,16 +17,20 @@
   <div class="black section myheader">
     <!-- <div class="row container"> -->
     <div class="row">
-      <div class="col s12 m3 l1">
+      <div class="col s2 m1">
         <a href="#" data-target="slide-out" class="sidenav-trigger">
-          <h1 class=" white-text text-darken-3 lighten-3 name">+Philip Cowan</h1>
+          <i class="material-icons black white-text medium">menu</i>
         </a>
       </div>
-      <div class="col s5 m3 push-m3 l2 push-l7">
+      <div class="col s10 m3 l1">
+      <h1 class="white-text name">Philip Cowan</h1>
+      </div>
+
+      <div class="col s5 m3 push-m3 l2 push-l6">
         <a class="githubicon" href="https://github.com/phil4lif" target="_blank">
           <img class="githubicon" src="assets/images/githubicon.png" alt="Github icon"></a>
       </div>
-      <div class="col s5 push-s1 m2 push-m4 l1 push-l7">
+      <div class="col s5 push-s1 m2 push-m3 l1 push-l6">
         <a class="linkedinicon" href="https://www.linkedin.com/in/philip-cowan-510558195/" target="_blank">
           <img class="linkedinicon" alt="Linked in Icon" src="assets/images/linkedinlogo.png">
         </a>
